tests/fail/BitwiseOr.java
package fail;

import java.lang.System;

public class BitwiseOr {
    public static void main(String[] args) {
        System.out.println('a' | 42);
    }
}
